--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Well....",
   "main": "dist/index.js",
+  "engines": {
+    "node": "6.11.1"
+  },
   "files": [
     "src",
     "dist"
